fix: little layout bugs

--- a/src/shared/assets/styles/mixins/_typography.scss
+++ b/src/shared/assets/styles/mixins/_typography.scss
@@ -108,9 +108,9 @@
   font-family: var(--subjetivity-font);
 }
 
-@mixin subhead-medium-18 {
-  @include font($size: 18px, $weight: 500, $lineHeight: 22px);
-  font-family: var(--poppins-font);
+@mixin subhead-medium-16 {
+  @include font($size: 16px, $weight: 500, $lineHeight: 22px);
+  font-family: var(--subjetivity-font);
 }
 
 @mixin subhead-light-18 {
